@@ -1,20 +1,10 @@
+# Created by Jevoom
 #
-# Description
-#
-# Author:: Robert Sharp
-# Copyright:: Copyright (c) 2010 Robert Sharp
-# License:: Open Software Licence v3.0
-#
-# This software is licensed for use under the Open Software Licence v. 3.0
-# The terms of this licence can be found at http://www.opensource.org/licenses/osl-3.0.php
-# and in the file copyright.txt. Under the terms of this licence, all derivative works
-# must themselves be licensed under the Open Software Licence v. 3.0
-# 
-# 
+# 18-Apr-2011
+#   Changed structure to module-based due to superclass mismatch errors. This version of
+#   Jeckyl is not backward compatible.
 
-class Jeckyl
-
-  Version = '0.0.3'
-  Version_Date = '12-Apr-2011'
-
+module Jeckyl
+  Version = '0.1.0'
+  Version_Date = '18-Apr-2011'
 end
